fixed extra space in csv download, added text to wrestler form

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -154,6 +154,12 @@ padding: 12px;
 
 }
 
+.border-wrestler-div p {
+
+text-align: center;
+
+
+}
 
 .navbar {
 
